# ai-finance-accounting-assistant

./: .env.example  .gitignore  Cargo.toml  README.md
apps/api/: Dockerfile
apps/api/crates/api/: Cargo.toml
apps/api/crates/api/src/: config.rs  errors.rs  main.rs  router.rs  state.rs
apps/api/crates/api/src/handlers/: ai.rs  approvals.rs  auth.rs  health.rs  invoices.rs  items.rs  journals.rs  master_data.rs  mod.rs  payments.rs  reports.rs  upload.rs  users.rs
apps/api/crates/api/src/middleware/: audit.rs  auth_middleware.rs  idempotency.rs  mod.rs  rate_limit.rs
apps/api/crates/application/: Cargo.toml
apps/api/crates/application/src/: errors.rs  lib.rs
apps/api/crates/application/src/dto/: approval.rs  auth.rs  invoice.rs  item.rs  journal.rs  master_data.rs  mod.rs  payment.rs  report.rs
apps/api/crates/application/src/ports/: account_repository.rs  ai_client_port.rs  approval_repository.rs  audit_log_repository.rs  bank_account_repository.rs  branch_repository.rs  company_repository.rs  customer_repository.rs  document_repository.rs  invoice_repository.rs  item_repository.rs  journal_repository.rs  mod.rs  payment_repository.rs  storage_port.rs  supplier_repository.rs  tax_repository.rs  user_repository.rs
apps/api/crates/application/src/services/: approval_service.rs  auth_service.rs  document_service.rs  invoice_service.rs  item_service.rs  journal_service.rs  master_data_service.rs  mod.rs  payment_service.rs  report_service.rs
apps/api/crates/domain/: Cargo.toml
apps/api/crates/domain/src/: errors.rs  lib.rs
apps/api/crates/domain/src/entities/: account.rs  approval.rs  audit.rs  bank_account.rs  branch.rs  company.rs  customer.rs  invoice.rs  item.rs  journal.rs  mod.rs  payment.rs  supplier.rs  tax.rs  uploaded_document.rs  user.rs
apps/api/crates/domain/src/rules/: approval_rules.rs  invoice_rules.rs  journal_rules.rs  mod.rs
apps/api/crates/domain/src/value_objects/: mod.rs
apps/api/crates/infrastructure/: Cargo.toml
apps/api/crates/infrastructure/src/: lib.rs
apps/api/crates/infrastructure/src/ai_client/: openai_client.rs
apps/api/crates/infrastructure/src/db/: mod.rs
apps/api/crates/infrastructure/src/repositories/: account_repository.rs  approval_repository.rs  audit_log_repository.rs  bank_account_repository.rs  branch_repository.rs  company_repository.rs  customer_repository.rs  document_repository.rs  invoice_repository.rs  item_repository.rs  journal_repository.rs  mod.rs  payment_repository.rs  supplier_repository.rs  tax_repository.rs  user_repository.rs
apps/api/crates/infrastructure/src/storage/: local_storage.rs
apps/api/crates/worker/: Cargo.toml
apps/api/crates/worker/src/: main.rs
apps/api/crates/worker/src/jobs/: backup_job.rs  mod.rs  overdue_alerts.rs  report_scheduler.rs  tax_reminders.rs
apps/api/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_seed_sample_journals.sql  004_multibranch.sql  005_seed_sales_invoices.sql  006_items.sql  007_sales_invoice_item_link.sql  008_purchase_invoice_lines.sql  009_seed_purchase_invoices.sql  010_purchase_attachment.sql  011_seed_payments.sql  012_payment_attachment.sql  013_tax_records.sql  014_seed_tax_data.sql  015_uploaded_documents.sql  016_idempotency.sql
apps/openclaw/agents/: accounting-automation.md  finance-assistant.md
apps/openclaw/prompts/: safety-rules.md  system-prompt.md
apps/openclaw/tools/: backend-tools.json
apps/openclaw/workflows/: approval-command.yaml  cash-query.yaml  invoice-draft.yaml
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/api/: approvals.api.ts  auth.api.ts  client.ts  invoices.api.ts  journals.api.ts  master-data.api.ts  payments.api.ts  reports.api.ts  users.api.ts
apps/web/src/assets/: main.css
apps/web/src/components/: ConfirmDialog.vue  MainLayout.vue  SearchableDropdown.vue
apps/web/src/composables/: useDocumentStatus.ts
apps/web/src/pages/: NotFoundPage.vue
apps/web/src/pages/approvals/: ApprovalsPage.vue
apps/web/src/pages/auth/: LoginPage.vue
apps/web/src/pages/dashboard/: DashboardPage.vue
apps/web/src/pages/journals/: JournalsPage.vue
apps/web/src/pages/payments/: PaymentsPage.vue
apps/web/src/pages/purchases/: InvoiceAutomationPage.vue  PurchaseInvoicesPage.vue
apps/web/src/pages/reports/: ReportsPage.vue
apps/web/src/pages/sales/: SalesInvoicesPage.vue
apps/web/src/pages/settings/: SettingsPage.vue
apps/web/src/pages/tax/: TaxPage.vue
apps/web/src/router/: index.ts
apps/web/src/stores/: approval.store.ts  auth.store.ts  invoice.store.ts  journal.store.ts
apps/web/src/types/: approval.types.ts  auth.types.ts  invoice.types.ts  journal.types.ts  master-data.types.ts  payment.types.ts  report.types.ts
apps/web/src/utils/: format.ts
docs/: prompt-stitch-figma-ai-finance-accounting-assistant.md  proposal-penawaran-ai-finance-accounting-assistant.docx  proposal-penawaran-ai-finance-accounting-assistant.md  requirement-ai-accounting-automation-assistant.md  requirement-kesiapan-project-ai-finance-accounting-assistant.md
docs/codex-ai-accounting-docs/: .env.example  00_README.md  01_PRODUCT_REQUIREMENTS.md  02_SYSTEM_ARCHITECTURE.md  03_ACCOUNTING_AND_TAX_DOMAIN.md  04_DATABASE_SCHEMA.md  05_API_CONTRACT.md  06_OPENCLAW_AI_WORKFLOWS.md  07_FRONTEND_SPEC.md  08_SECURITY_AND_AUDIT.md  09_DEVOPS_DEPLOYMENT.md  10_MVP_ROADMAP_AND_BACKLOG.md  11_ACCEPTANCE_TESTS.md  12_CODEX_TASKS.md  AGENTS.md  REFERENCES.md  docker-compose.template.yml
infra/: docker-compose.dev.yml  docker-compose.prod.yml
