[package]
name        = "finance_assistant_domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
rust_decimal = { workspace = true }
thiserror   = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
